force-app/main/default/objects/Opportunity_Account__c/Opportunity_Account__c.object-meta.xml
<CustomObject>
    <label>Opportunity Account Connection</label>
    <nameField>
        <displayFormat>OA-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Account Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>