force-app/main/default/objects/Opportunity_Account__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>TEXT( Account__r.Account_Status__c )</formula>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>