force-app/main/default/objects/Opportunity_Account__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>TEXT( Account__r.Type )</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>