force-app/main/default/objects/Opportunity_Account__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts Involved</relationshipLabel>
    <relationshipName>Opportunity_Account_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>