force-app/main/default/objects/Opportunity_Account__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>IF(NOT(ISBLANK( Opportunity__r.Project__c ) ) , Opportunity__r.Project__c , &quot;Not Related&quot;)</formula>
    <label>Project</label>
    <type>Text</type>
</CustomField>