force-app/main/default/objects/Opportunity_Account__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <formula>IF( NOT(ISBLANK( Opportunity__r.Project__c ) ) , TEXT( Opportunity__r.Project__r.Status__c ), &quot;N/A&quot;)</formula>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>