force-app/main/default/objects/Opportunity_Account__c/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <formula>Account__r.Prospect__c</formula>
    <label>Prospect</label>
    <type>Checkbox</type>
</CustomField>