force-app/main/default/objects/Opportunity_Account__c/fields/Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address__c</fullName>
    <formula>Opportunity__r.ShipTo_Address__c</formula>
    <label>Ship To Address</label>
    <type>Text</type>
</CustomField>