force-app/main/default/objects/Opportunity_Account__c/fields/Weighted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Amount__c</fullName>
    <formula>Opportunity__r.Weighted_Amount__c</formula>
    <label>Weighted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>